Migration agent now also check old wallet is empty before starting

BUG: 346498

Some distributions provide old kwalletd along with the new kwalletd5.
In this case, the old kwalletd do not have any data to migrate.